View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022954 | Community | OCCT:Foundation Classes | public | 2012-01-31 14:09 | 2012-04-16 12:53 |
Reporter | Pawel | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022954: Variable not freed upon realloc failure | ||||
Description | Line 146 in OSD_Environment: buffer = (char **) realloc ( buffer, Ibuffer * sizeof(char*) ); | ||||
Tags | No tags attached. | ||||
Test case number | Test case is not required | ||||
|
Added realloc failure handling. Branch http://svn/svn/occt/branches/OCC22954 is ready to be reviewed. Dear Andrey, Please review. |
|
No remarks; please test |
|
Dear BugMaster, Workbench KAS:dev:apn-22954-occt was created from SVN branch http://svn/svn/occt/branches/OCC22954 (and apn-22954-products from trunk) and compiled on Linux and Windows platforms. There are compilation errors: Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:OMFCAF:source:OMFCAF_MeshCommand.cxx Info : Failed : :KAS:dev:apn-22954-products:OMFCAF:source:OMFCAF_TMesh.cxx Info : Failed : :KAS:dev:apn-22954-products:OMFCAF:source:OMFCAF_MeshBinDriver.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:OMFTest:source:OMFTest_CafCommands.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:EMeshTest:source:EMeshTest.cxx Info : Failed : :KAS:dev:apn-22954-products:EMeshTest:source:EMeshTest_Face2d.cxx Info : Failed : :KAS:dev:apn-22954-products:EMeshTest:source:EMeshTest_DrawableModel.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:QMBgr:source:QMBgr_QuadTree.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:QMTools:source:QMTools_EdgeCorrector.cxx Info : Failed : :KAS:dev:apn-22954-products:QMTools:source:QMTools_WireCorrector.cxx Info : Failed : :KAS:dev:apn-22954-products:QMTools:source:QMTools_FaceCorrector.cxx Info : Failed : :KAS:dev:apn-22954-products:QMTools:source:QMTools_IntPolySeg2d.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:MS:derivated:MS_MapOfType_0.cxx Info : Failed : :KAS:dev:apn-22954-products:MS:derivated:MS_MapOfGlobalEntity_0.cxx Info : Failed : :KAS:dev:apn-22954-products:MS:derivated:MS_MapOfMethod_0.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:WOKBuilder:derivated:WOKBuilder_MapOfMSAction_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKBuilder:derivated:WOKBuilder_DataMapOfMSActionIDOfMSAction_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKBuilder:derivated:WOKBuilder_DataMapOfHAsciiStringOfMSEntity_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKBuilder:derivated:WOKBuilder_DataMapOfHAsciiStringOfToolInShell_0.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:WOKDeliv:derivated:WOKDeliv_DataMapOfParcel_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKDeliv:derivated:WOKDeliv_DataMapOfFiles_0.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:WOKMake:derivated:WOKMake_IndexedDataMapOfBuildProcessGroup_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKMake:derivated:WOKMake_DataMapOfHAsciiStringOfDevUnit_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKMake:derivated:WOKMake_IndexedDataMapOfHAsciiStringOfInputFile_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKMake:derivated:WOKMake_IndexedDataMapOfHAsciiStringOfOutputFile_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKMake:derivated:WOKMake_IndexedMapOfDepItem_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKMake:derivated:WOKMake_DataMapOfHAsciiStringOfStep_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKMake:derivated:WOKMake_DataMapOfHAsciiStringOfSequenceOfHAsciiString_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKMake:derivated:WOKMake_DataMapOfHAsciiStringOfStepBuilder_0.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:WOKOrbix:derivated:WOKOrbix_DataMapOfHAsciiStringOfHAsciiString_0.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:WOKTools:derivated:WOKTools_MapOfHAsciiString_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKTools:derivated:WOKTools_DataMapOfHAsciiStringOfHAsciiString_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKTools:derivated:WOKTools_IndexedMapOfHAsciiString_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKTools:derivated:WOKTools_IndexedDataMapOfHAsciiString_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKTools:derivated:WOKTools_DataMapOfHAsciiStringOfHSequenceOfHAsciiString_0.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:WOKUtils:derivated:WOKUtils_MapOfPath_0.cxx Info : ----------------------------------------------------------------- Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:apn-22954-products:WOKernel:derivated:WOKernel_DataMapOfHAsciiStringOfFactory_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKernel:derivated:WOKernel_DataMapOfHAsciiStringOfWarehouse_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKernel:derivated:WOKernel_DataMapOfHAsciiStringOfWorkshop_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKernel:derivated:WOKernel_DataMapOfHAsciiStringOfParcel_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKernel:derivated:WOKernel_DataMapOfHAsciiStringOfWorkbench_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKernel:derivated:WOKernel_DataMapOfHAsciiStringOfDevUnit_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKernel:derivated:WOKernel_DataMapOfHAsciiStringOfFile_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKernel:derivated:WOKernel_DataMapOfFileType_0.cxx Info : Failed : :KAS:dev:apn-22954-products:WOKernel:derivated:WOKernel_DataMapOfFileTypeBase_0.cxx Info : ----------------------------------------------------------------- |
|
Patch for the bug 22815 has not yet merged with the occt/trunk, but it's already in the occt-products. So you need to wait for the merge or test only occt part. |
|
Dear BugMaster, SVN branch http://svn/svn/occt/branches/OCC22954 hes been moved to GIT CR22954 one. Workbench KAS:dev:apn-22954-occt was compiled on Linux platform. There are following regressions in apn-22954-products regarding to KAS:dev:products-20120222-opt: chl 936 U6 U7 U8 U9 V5 V6 V7 V8 V9 W1 W2 W3 or it's unstables? (but launching this cases in EMAX I get the same results). See results in /QADisk/occttests/results/KAS/dev/apn-22954-products_09032012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120222-opt_22022012/lin See test cases in /QADisk/occttests/tests/ED |
|
Regressions caused by the patch for the bug #23000. This patch merged with the Git master branch, please pay attention to it. |
|
Dear BugMaster, SVN branch http://svn/svn/occt/branches/OCC22954 [^] hes been moved to GIT CR22954 one. Workbench KAS:dev:apn-22954-occt was created from git branch CR22954 (and apn-22954-products from svn trunk) and compiled on Linux platform. There are not regressions in apn-22954-products regarding to KAS:dev:products-20120222-opt See results in /QADisk/occttests/results/KAS/dev/apn-22954-products_09032012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120222-opt_22022012/lin See test cases in /QADisk/occttests/tests/ED |
|
Integrated into master |
|
Verified. Please close. |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-01-31 14:09 | Pawel | New Issue | |
2012-01-31 14:09 | Pawel | Assigned To | => abv |
2012-02-15 17:17 | abv | Assigned To | abv => dbv |
2012-02-15 17:17 | abv | Status | new => assigned |
2012-03-06 10:25 | dbv | Note Added: 0019869 | |
2012-03-06 10:25 | dbv | Assigned To | dbv => abv |
2012-03-06 10:25 | dbv | Status | assigned => resolved |
2012-03-06 10:38 | abv | Note Added: 0019870 | |
2012-03-06 10:38 | abv | Assigned To | abv => dbv |
2012-03-06 10:38 | abv | Status | resolved => reviewed |
2012-03-06 10:41 | apn | Assigned To | dbv => apn |
2012-03-06 11:32 | apn | Note Added: 0019876 | |
2012-03-06 11:34 | apn | Assigned To | apn => dbv |
2012-03-06 11:34 | apn | Status | reviewed => assigned |
2012-03-06 12:11 | dbv | Status | assigned => resolved |
2012-03-06 12:15 | abv | Status | resolved => reviewed |
2012-03-06 12:16 | dbv | Note Added: 0019880 | |
2012-03-06 12:20 |
|
Assigned To | dbv => apn |
2012-03-09 16:09 | apn | Note Added: 0019898 | |
2012-03-09 16:10 | apn | Test case number | => Test case is not required |
2012-03-09 16:10 | apn | Assigned To | apn => dbv |
2012-03-09 16:10 | apn | Status | reviewed => assigned |
2012-03-13 13:48 | dbv | Note Added: 0019947 | |
2012-03-13 13:48 | dbv | Assigned To | dbv => abv |
2012-03-13 13:48 | dbv | Status | assigned => resolved |
2012-03-13 13:49 | dbv | Note Edited: 0019947 | |
2012-03-13 14:47 | apn | Note Added: 0019949 | |
2012-03-13 14:48 | apn | Status | resolved => reviewed |
2012-03-13 14:49 | apn | Assigned To | abv => bugmaster |
2012-03-13 14:49 | apn | Status | reviewed => tested |
2012-03-15 18:56 | bugmaster | Target Version | => 6.5.3 |
2012-03-15 19:12 | bugmaster | Note Added: 0020003 | |
2012-03-15 19:12 | bugmaster | Status | tested => verified |
2012-03-15 19:12 | bugmaster | Resolution | open => fixed |
2012-03-15 19:12 | bugmaster | Assigned To | bugmaster => dbv |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 8413a813 |
2012-04-03 13:29 | abv | Assigned To | dbv => Pawel |
2012-04-16 12:53 | Pawel | Assigned To | Pawel => bugmaster |
2012-04-16 12:53 | Pawel | Note Added: 0020397 |