0022954: Variable not freed upon realloc failure